<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Трекер Алкоголя</string>

    <!--menu-->
    <string name="add">Добавить</string>
    <string name="calendar">Календарь</string>
    <string name="statistic">Статистика</string>
    <string name="settings">Настройки</string>

    <!--calendar-->
    <string name="calendar_add_press">Чтобы начать, добавьте напиток</string>
    <string name="calendar_empty">В этот день не выпито ни грамма!:)</string>
    <string name="calendar_date">Дата</string>

    <!--add-->
    <string name="add_drink_title">Добавить напиток</string>
    <string name="date_format_pattern">dd/MM/yyyy</string>
    <string name="add_drink">Напиток</string>
    <string name="add_volume">Объем</string>
    <string name="add_quantity">Количество</string>
    <string name="add_degree">Градус</string>
    <string name="add_price">Стоимость одного напитка</string>
    <string name="add_date">Выбрать дату</string>
    <string name="add_today">Сегодня</string>
    <string name="add_total_litres">Количество</string>
    <string name="add_total_money">Итого</string>
    <string name="add_empty">0</string>
    <string name="add_currency">RUR</string>
    <string name="add_litres">л</string>
    <string name="add_degree_s" translatable="false">°</string>
    <string name="add_save">Сохранить</string>
    <string name="enter_price">!Введите стоимость</string>

    <!--add new drink-->
    <string name="add_new_drink">Создать напиток</string>

    <!--edit-->
    <string name="edit_drink_title">Редактировать напиток</string>

    <!--create drink-->
    <string name="create_drink_title">Создать напиток</string>
    <string name="create_drink_hint">Название напитка</string>
    <string name="dialog_create_drink_add">Добавить иконку</string>
    <string name="dialog_create_drink_add_degree">Добавить крепость</string>
    <string name="dialog_create_drink_add_volume">Добавить объем</string>
    <string name="select_icon">Выберите иконку</string>
    <string name="bottom_sheet_option_camera">Использовать камеру</string>
    <string name="bottom_sheet_option_gallery">Загрузить из галлереи</string>
    <string name="bottom_sheet_option_heading">Добавить фотографию</string>
    <string name="bottom_sheet_option_remove_photo">Удалить фотографию</string>

    <!--dialog select date-->
    <string name="dialog_select_date_title">Использовать выбранную дату для добавления напитка?</string>
    <string name="dialog_select_date_ok">Да</string>
    <string name="dialog_select_date_no">Нет</string>

    <!--dialog delete-->
    <string name="dialog_delete_title">Вы действительно хотите удалить запись?</string>


    <!--settings-->
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="settings_version">Версия</string>
    <string name="rate_app">Оценить приложение</string>
    <string name="default_theme">Использовать системную тему</string>

    <string-array name="theme_array">
        <item>Светлая тема</item>
        <item>Темная тема</item>

    </string-array>

    <!--statistic-->
    <string name="statistic_week_days">Неделю</string>
    <string name="statistic_month_days">Месяц</string>
    <string name="statistic_year_days">Год</string>
    <string name="statistic_count_days">Я пил %s из %d дней</string>
    <string name="statistic_count_drink">x %d</string>
    <string name="statistic_drinks">Напитки выпитые мною</string>
    <string name="statistic_spent">Мною потрачено за</string>
    <string name="statistic_drink_count">x 0</string>

    <!--content description-->
    <string name="cd_icon_app">Иконка приложения</string>
    <string name="cd_edit_button">Редактировать</string>
    <string name="cd_delete_button">Удалить</string>
    <string name="cd_show_panel">Сдвинуть в влево</string>
    <string name="cd_image_drink">Изображение напитка</string>
    <string name="cd_choice_theme">Выбранная тема</string>

    <!--regex-->
    <string name="only_number_regex" tools:ignore="TypographyDashes">[^0-9, .]</string>
    <string name="only_text_regex">[^A–z, А-я]</string>
    <string name="divide_value" translatable="false"> - </string>

    <plurals name="plurals_day">
        <item quantity="one">%1$d день</item>
        <item quantity="few">%1$d дня</item>
        <item quantity="many">%1$d дней</item>
        <item quantity="other">%1$d дней</item>
    </plurals>

    <string-array name="statistic_period_array">
        <item>Неделю</item>
        <item>Месяц</item>
        <item>Год</item>

    </string-array>

    <!--enum-->
    <string name="enum_absent">Абсент</string>
    <string name="enum_beer">Пиво</string>
    <string name="enum_brandy">Бренди</string>
    <string name="enum_champagne">Шампанское</string>
    <string name="enum_cider">Сидр</string>
    <string name="enum_cocktail">Коктейль</string>
    <string name="enum_cognac">Коньяк</string>
    <string name="enum_liqueur">Ликер</string>
    <string name="enum_shot">Шоты</string>
    <string name="enum_tequila">Текила</string>
    <string name="enum_vodka">Водка</string>
    <string name="enum_whiskey">Виски</string>
    <string name="enum_rum">Ром</string>
    <string name="enum_gin">Джин</string>
    <string name="enum_wine">Вино</string>

    <!--calculator-->
    <string name="calc_ac" translatable="false">AC</string>
    <string name="calc_ok" translatable="false">OK</string>
    <string name="calc_7" translatable="false">7</string>
    <string name="calc_8" translatable="false">8</string>
    <string name="calc_9" translatable="false">9</string>
    <string name="calc_divide" translatable="false">/</string>
    <string name="calc_4" translatable="false">4</string>
    <string name="calc_5" translatable="false">5</string>
    <string name="calc_6" translatable="false">6</string>
    <string name="calc_multiply" translatable="false">*</string>
    <string name="calc_1" translatable="false">1</string>
    <string name="calc_2" translatable="false">2</string>
    <string name="calc_3" translatable="false">3</string>
    <string name="calc_minus" translatable="false">-</string>
    <string name="calc_0" translatable="false">0</string>
    <string name="calc_equally" translatable="false">=</string>
    <string name="calc_plus" translatable="false">+</string>

    <string-array name="volume_beer_array">
        <item>0.33 л</item>
        <item>0.375 л</item>
        <item>0.45 л</item>
        <item>0.48 л</item>
        <item>0.5 л</item>
        <item>0.568 л</item>
        <item>1 л</item>

    </string-array>

    <string-array name="volume_absent_array">
        <item>20 мл</item>
        <item>30 мл</item>
        <item>40 мл</item>
        <item>50 мл</item>

    </string-array>

    <string-array name="volume_brandy_array">
        <item>0.05 л</item>
        <item>0.3 л</item>
        <item>0.4 л</item>
        <item>0.5 л</item>
        <item>0.7 л</item>
        <item>1 л</item>

    </string-array>

    <string-array name="volume_champagne_array">
        <item>0.125 л</item>
        <item>0.175 л</item>
        <item>0.375 л</item>
        <item>0.750 л</item>

    </string-array>

    <string-array name="volume_cocktail_array">
        <item>20 мл</item>
        <item>35 мл</item>
        <item>40 мл</item>
        <item>50 мл</item>
        <item>100 мл</item>
        <item>150 мл</item>
        <item>200 мл</item>
        <item>220 мл</item>
        <item>250 мл</item>

    </string-array>

    <string-array name="volume_cognac_array">
        <item>0.05 л</item>
        <item>0.3 л</item>
        <item>0.4 л</item>
        <item>0.5 л</item>
        <item>0.7 л</item>
        <item>1 л</item>

    </string-array>

    <string-array name="volume_liquor_array">
        <item>20 мл</item>
        <item>35 мл</item>
        <item>40 мл</item>
        <item>50 мл</item>

    </string-array>

    <string-array name="volume_tequila_array">
        <item>20 мл</item>
        <item>35 мл</item>
        <item>40 мл</item>
        <item>50 мл</item>

    </string-array>


    <string-array name="volume_vodka_array">
        <item>0.05 л</item>
        <item>0.3 л</item>
        <item>0.4 л</item>
        <item>0.5 л</item>
        <item>0.7 л</item>
        <item>1 л</item>

    </string-array>

    <string-array name="volume_whiskey_array">
        <item>0.05 л</item>
        <item>0.3 л</item>
        <item>0.4 л</item>
        <item>0.5 л</item>
        <item>0.7 л</item>
        <item>1 л</item>

    </string-array>

    <string-array name="volume_gin_array">
        <item>0.05 л</item>
        <item>0.3 л</item>
        <item>0.4 л</item>
        <item>0.5 л</item>
        <item>0.7 л</item>
        <item>1 л</item>

    </string-array>

    <string-array name="volume_wine_array">
        <item>100 мл</item>
        <item>125 мл</item>
        <item>150 мл</item>
        <item>175 мл</item>
        <item>375 мл</item>
        <item>750 мл</item>

    </string-array>

    <string-array name="volume_cider_array">
        <item>0.33 л</item>
        <item>0.375 л</item>
        <item>0.45 л</item>
        <item>0.48 л</item>
        <item>0.5 л</item>
        <item>0.568 л</item>
        <item>1 л</item>

    </string-array>

    <string-array name="volume_shots_array">
        <item>20 мл</item>
        <item>35 мл</item>
        <item>40 мл</item>
        <item>50 мл</item>

    </string-array>

    <string-array name="volume_rum_array">
        <item>0.05 л</item>
        <item>0.3 л</item>
        <item>0.4 л</item>
        <item>0.5 л</item>
        <item>0.7 л</item>
        <item>1 л</item>

    </string-array>

    <string name="material_calendar_monday">Пн</string>
    <string name="material_calendar_tuesday">Вт</string>
    <string name="material_calendar_wednesday">Ср</string>
    <string name="material_calendar_thursday">Чт</string>
    <string name="material_calendar_friday">Пт</string>
    <string name="material_calendar_saturday">Сб</string>
    <string name="material_calendar_sunday">Вс</string>

    <array name="material_calendar_months_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </array>

</resources>