<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="245dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="@dimen/dp_16"
        android:textColor="@color/text_color"
        tools:text="1000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calculator_button_ac"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/background_color"
            android:text="@string/calc_ac"
            android:textColor="@color/text_color"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/calculator_button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/calc_ok"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calculator_button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/background_color"
            android:text="@string/calc_7"
            android:textColor="@color/text_color"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/calculator_button_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/background_color"
            android:text="@string/calc_8"
            android:textColor="@color/text_color"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/calculator_button_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/background_color"
            android:text="@string/calc_9"
            android:textColor="@color/text_color"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/calculator_button_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/calc_divide"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calculator_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/background_color"
            android:text="@string/calc_4"
            android:textColor="@color/text_color"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/calculator_button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/background_color"
            android:text="@string/calc_5"
            android:textColor="@color/text_color"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/calculator_button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/background_color"
            android:text="@string/calc_6"
            android:textColor="@color/text_color"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/calculator_button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/calc_multiply"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calculator_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/background_color"
            android:text="@string/calc_1"
            android:textColor="@color/text_color"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/calculator_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/background_color"
            android:text="@string/calc_2"
            android:textColor="@color/text_color"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/calculator_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:backgroundTint="@color/background_color"
            android:text="@string/calc_3"
            android:textColor="@color/text_color"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/calculator_button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/calc_minus"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calculator_button_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/background_color"
            android:text="@string/calc_0"
            android:textColor="@color/text_color"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/calculator_button_equally"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/calc_equally"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/calculator_button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:backgroundTint="@color/cardview_dark_background"
            android:text="@string/calc_plus"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>