<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/calendarFragment"
            android:icon="@drawable/ic_calendar_24dp"
            android:title="@string/calendar"/>

        <item android:id="@+id/statisticFragment"
            android:icon="@drawable/ic_statistic_24dp"
            android:title="@string/statistic"/>

        <item
            android:id="@+id/placeholder_first"
            android:enabled="false"
            android:title="" />

        <item
            android:id="@+id/placeholder_second"
            android:enabled="false"
            android:title="" />

        <item android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/settings"/>

    </group>

</menu>