<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:cardCornerRadius="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_margin="8dp"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/create_drink_title"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/create_drink_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:fontFamily="@font/roboto_condensed_regular"
                android:hint="@string/create_drink_hint"
                android:textSize="18sp" />

        </LinearLayout>


        <NumberPicker
            android:id="@+id/alcohol_strength_number_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:fontFamily="@font/roboto_condensed_regular"
            android:theme="@style/AppTheme.Picker" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_save_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/add_save"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/text_color_white"
            app:cornerRadius="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/button_stroke_color" />

    </LinearLayout>

</androidx.cardview.widget.CardView>