<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="11dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:srcCompat="@mipmap/ic_launcher" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/settings_version"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/version_app" />

    <TextView
        android:id="@+id/version_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="24dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="1.0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="18dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/terms_of_use_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/privacy_policy"
                android:textAllCaps="false"
                android:visibility="gone"
                android:textColor="@color/text_color_white"
                app:backgroundTint="@color/accent_color"
                app:cornerRadius="18dp"
                app:strokeColor="@color/button_stroke_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/privacy_policy_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/terms_of_use"
                android:textAllCaps="false"
                android:visibility="gone"
                android:textColor="@color/text_color_white"
                app:backgroundTint="@color/accent_color"
                app:cornerRadius="18dp"
                app:strokeColor="@color/button_stroke_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Темная тема"
                    android:textSize="18sp"
                    android:padding="12dp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:textColor="@color/text_color"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:useMaterialThemeColors="true"
                    android:layout_margin="12dp"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rate_app_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/rate_app"
                android:textAllCaps="false"
                android:textColor="@color/text_color_white"
                app:backgroundTint="@color/accent_color"
                app:cornerRadius="18dp"
                app:strokeColor="@color/button_stroke_color" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>